--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   },
   "baseConfig": {
     "name": "@dword-design/component",
-    "testInContainer": true
+    "testInContainer": true,
+    "cdnExtraScripts": [
+      "<script src=\"https://unpkg.com/mermaid/dist/mermaid.min.js\"></script>"
+    ]
   }
 }
