--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "checkUnknownFiles": "base checkUnknownFiles",
     "commit": "base commit",
+    "depcheck": "base depcheck",
     "lint": "base lint",
     "prepare": "base prepare",
     "prepublishOnly": "base prepublishOnly",
@@ -24,7 +25,6 @@
     "test:raw": "base test:raw"
   },
   "dependencies": {
-    "depcheck-package-name": "^3.0.0",
     "mermaid": "^8.8.3",
     "nanoid": "^3"
   },
@@ -34,7 +34,7 @@
     "@dword-design/functions": "^4.0.0",
     "@dword-design/puppeteer": "^6.0.0",
     "@dword-design/tester": "^2.0.0",
-    "@dword-design/tester-plugin-component": "^2.0.0",
+    "@dword-design/tester-plugin-component": "^3.0.0",
     "@dword-design/tester-plugin-puppeteer": "^2.0.0"
   },
   "engines": {
