--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,6 @@
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "updateContentCommand": "nvm install 18 && nvm use 18 && yarn --frozen-lockfile"
+  "image": "mcr.microsoft.com/devcontainers/javascript-node:0-18",
+  "updateContentCommand": "yarn --frozen-lockfile"
 }
