--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
   "type": "module",
-  "main": "dist/index.ssr.js",
+  "exports": "./dist/index.esm.js",
+  "main": "dist/index.esm.js",
   "unpkg": "dist/index.min.js",
-  "module": "dist/index.esm.js",
-  "browser": "dist/index.esm.js",
+  "browser": "dist/index.min.js",
   "files": [
     "dist"
   ],
@@ -29,8 +29,8 @@
     "nanoid": "^4.0.0"
   },
   "devDependencies": {
-    "@dword-design/base": "^9.1.10",
-    "@dword-design/base-config-component": "^2.0.0",
+    "@dword-design/base": "^10.1.4",
+    "@dword-design/base-config-component": "^3.0.4",
     "@dword-design/functions": "^4.0.0",
     "@dword-design/puppeteer": "^6.0.0",
     "@dword-design/tester": "^2.0.0",
@@ -38,7 +38,7 @@
     "@dword-design/tester-plugin-puppeteer": "^2.0.0"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "publishConfig": {
     "access": "public"
