--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
   "type": "module",
-  "exports": "./dist/index.esm.js",
-  "main": "dist/index.esm.js",
+  "main": "dist/index.ssr.js",
   "unpkg": "dist/index.min.js",
-  "browser": "dist/index.min.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.esm.js",
   "files": [
     "dist"
   ],
@@ -25,20 +25,20 @@
     "test:raw": "base test:raw"
   },
   "dependencies": {
-    "mermaid": "^8",
+    "mermaid": "^8.8.3",
     "nanoid": "^4.0.0"
   },
   "devDependencies": {
-    "@dword-design/base": "^10.1.4",
-    "@dword-design/base-config-component": "^3.0.4",
-    "@dword-design/functions": "^5.0.24",
+    "@dword-design/base": "^9.1.10",
+    "@dword-design/base-config-component": "^2.0.0",
+    "@dword-design/functions": "^4.0.0",
     "@dword-design/puppeteer": "^6.0.0",
     "@dword-design/tester": "^2.0.0",
-    "@dword-design/tester-plugin-component": "^4.0.0",
+    "@dword-design/tester-plugin-component": "^3.0.0",
     "@dword-design/tester-plugin-puppeteer": "^2.0.0"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=14"
   },
   "publishConfig": {
     "access": "public"
