--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
   "editor.tabSize": 2,
   "files.autoSave": "off",
   "files.exclude": {
-    ".babelrc.json": true,
     ".browserslistrc": true,
     ".commitlintrc.json": true,
     ".cz.json": true,
@@ -21,6 +20,7 @@
     ".vscode": true,
     "CHANGELOG.md": true,
     "LICENSE.md": true,
+    "babel.config.json": true,
     "coverage": true,
     "dist": true,
     "node_modules": true,
