--- a/.baserc.json
+++ b/.baserc.json
@@ -3,5 +3,10 @@
   "testInContainer": true,
   "seeAlso": [
     { "repository": "nuxt-mermaid-string", "description": "Embed a Mermaid diagram in a Nuxt.js app by providing its diagram string." }
-  ]
+  ],
+  "depcheckConfig": {
+    "ignoreMatches": [
+      "playwright-chromium"
+    ]
+  }
 }
