--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,7 @@
     "coverage": true,
     "dist": true,
     "node_modules": true,
-    "yarn.lock": true
+    "pnpm-lock.yaml": true
   },
   "workbench.editor.enablePreview": false
 }
