--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,6 +18,7 @@ tasks:
     init: |-
       git config --global user.name "Sebastian Landwehr"
       git config diff.lfs.textconv cat
+      git lfs pull
       pnpm install --frozen-lockfile
 vscode:
   extensions:
