--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,4 @@
 {
-  "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
-  },
-  "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20",
-  "updateContentCommand": "pnpm install --frozen-lockfile"
+  "image": "dworddesign/devcontainer",
+  "postCreateCommand": "pnpm install --frozen-lockfile"
 }
