--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 .DS_Store
 .browserslistrc
 /.env.json
-/.nyc_output
+/.pnpm-store
 /.test.env.json
+/codecov
+/codecov.SHA256SUM
+/codecov.SHA256SUM.sig
 /coverage
 /dist
 /node_modules
+/test-results
