--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,6 @@
     ".cz.json": true,
     ".devcontainer": true,
     ".editorconfig": true,
-    ".eslintrc.json": true,
     ".gitattributes": true,
     ".github": true,
     ".gitignore": true,
@@ -15,17 +14,22 @@
     ".gitpod.yml": true,
     ".husky": true,
     ".npmrc": true,
-    ".nyc_output": true,
+    ".pnpm-store": true,
     ".releaserc.json": true,
     ".renovaterc.json": true,
     ".vscode": true,
     "CHANGELOG.md": true,
     "LICENSE.md": true,
-    "babel.config.json": true,
+    "codecov": true,
+    "codecov.SHA256SUM": true,
+    "codecov.SHA256SUM.sig": true,
     "coverage": true,
     "dist": true,
+    "eslint.config.ts": true,
+    "eslint.lint-staged.config.ts": true,
     "node_modules": true,
-    "pnpm-lock.yaml": true
+    "pnpm-lock.yaml": true,
+    "vite.config.ts": true
   },
   "workbench.editor.enablePreview": false
 }
