--- a/package.json
+++ b/package.json
@@ -35,16 +35,21 @@
     "verify": "base verify"
   },
   "dependencies": {
-    "endent": "npm:@dword-design/endent@^1.4.7",
     "mermaid": "^11.4.0",
     "nanoid": "^5.0.8"
   },
   "devDependencies": {
     "@dword-design/base": "^16",
     "@dword-design/base-config-component": "^7.0.1",
-    "@playwright/test": "^1.48.2"
+    "@playwright/browser-chromium": "^1.57.0",
+    "@playwright/test": "npm:@playwright/experimental-ct-vue@^1.57.0",
+    "endent": "npm:@dword-design/endent@^1.4.7",
+    "p-timeout": "^7.0.1"
   },
-  "packageManager": "pnpm@9.13.1+sha256.dd98691b127b5d2c4d0605b594e98ec0bcbe5fba86358184de706c3312a4e2ee",
+  "peerDependencies": {
+    "vue": "*"
+  },
+  "packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a",
   "engines": {
     "node": ">=22"
   },
